# iplocation

./: Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  org.moses.iplocation.service.in
src/: Makefile.am  iplocation.c  iplocationd.c  main.c  org.moses.IpLocation.xml  qqwry.c  qqwry.h
